OATH Toolkit NEWS -- History of user-visible changes.           -*- outline -*-
Copyright (C) 2009-2014 Simon Josefsson.  Licensed under the GPLv3+.

* Version 2.6.0 (unreleased)

** liboath: Support TOTP with HMAC-SHA256 and HMAC-SHA512.
This adds new APIs oath_totp_generate2, oath_totp_validate4 and
oath_totp_validate4_callback.

** oathtool: The --totp parameter now take an optional argument to specify MAC.
For example use --totp=sha256 to use HMAC-SHA256.  When --totp is used
the default HMAC-SHA1 is used, as before.

** pam_oath: Mention in README that you shouldn't use insecure keys.
Suggested by Robin.

** pam_oath: Check return value from strdup.
Patch by Eero Häkkinen.

* Version 2.4.1 (released 2014-02-12)

** liboath: Fix usersfile bug that caused it to update the wrong line.
When an usersfile contain multiple lines for the same user but with an
unparseable token type (e.g., HOTP vs TOTP), the code would update the
wrong line of the file.  Since the then updated line could be a
commented out line, this can lead to the same OTP being accepted
multiple times which is a security vulnerability.  Reported by Bas van
Schaik <bas@sj-vs.net> and patch provided by Ilkka Virta
<itvirta@iki.fi>.  CVE-2013-7322

* Version 2.4.0 (released 2013-07-21)

** liboath: Add new API methods for validating TOTP OTPs
The new methods (oath_totp_validate3 and oath_totp_validate3_callback)
introduce a new parameter *otp_counter, which is set to the actual
counter used to calculate the OTP (unless it is a NULL pointer). This
allows for easier OTP replay detection in applications using liboath.
Patch from Fabian Grünbichler <fabian.gruenbichler@tuwien.ac.at>.

* Version 2.2.0 (released 2013-07-07)

** libpskc: Add functions for setting PSKC data.
The new functions are pskc_add_keypackage and all pskc_set_* functions
(see libpskc/include/pskc/keypackage.h).  This allow you to write
programs that generate new PSKC structures.
